# permute

./: CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  config.h.in  permute.cc
